# llm-bench

./: .gitattributes  .gitignore  README.md  pyproject.toml
benchmark_output/comm_runs/20260608_135844_nccl_all_reduce/: launch_plan.sh  nccl.results.jsonl  nccl.summary.json  run_manifest.json
benchmark_output/runs/20260608_140105_qwen3-5-9b_sglang/: config.requested.yaml  config.resolved.yaml  environment.json  launch_plan.sh  metrics.gpu.jsonl  metrics.requests.jsonl  metrics.summary.json  run_manifest.json
configs/: inference.yaml
examples/: workload.jsonl
examples/prompts/: incident.md  logs.txt  request.json
examples/prompts/nested/: nested.txt
llm_bench/: __init__.py  __main__.py  archive.py  charts.py  cleanup.py  cli.py  comm.py  compare.py  config.py  environment.py  errors.py  gpu.py  http_client.py  interactive.py  metrics.py  regression.py  report.py  textutil.py  tokenizer.py  workload.py  yaml_io.py
llm_bench/backends/: __init__.py  base.py  docker_serving.py  dry_run.py  registry.py  transformers_backend.py
llm_bench/commands/: cleanup.py  comm.py  common.py  compare.py  config.py  history.py  infer.py  self_test.py
packaging/: llm-bench.spec
scripts/: build_binary.sh
tests/: test_archive.py  test_cli.py  test_comm.py  test_compare_cleanup.py  test_config_overrides.py  test_docker_serving.py  test_errors.py  test_gpu.py  test_http_client.py  test_infer_failures.py  test_integration_backends.py  test_interactive.py  test_metrics.py  test_model_discovery.py  test_report.py  test_transformers_kwargs.py  test_workload.py
(+11 files in other folders)
